# prismatic

./: .CMakeLists.txt.swp  .cproject  .gitignore  .project  Array2D.h  Array2D_tester.cpp  CMakeLists.txt  MANIFEST  MANIFEST.in  PRISM01.cpp  PRISM02.cpp  PRISM03.cpp  PRISM_entry.cpp  README.md  SI100.XYZ  SI100Negative.XYZ  SI100_lowocc.XYZ  SI100_test.XYZ  SRT.XYZ  a.out  conda-forge.yml  configure.cpp  configure.h  defines.h  driver  driver.cpp  driver.cpp~  driver.gcda  driver.gcno  gmon.out  mac_build.sh  main.cpp  pyprismatic.cpp  requirements.txt  setup.py  temp.XYZ  test  test.XYZ  test.py  test_atom.txt
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_c_compiler_version7cuda_compiler_version10.0cxx_compiler_version7.yaml  linux_64_c_compiler_version7cuda_compiler_version10.1cxx_compiler_version7.yaml  linux_64_c_compiler_version7cuda_compiler_version10.2cxx_compiler_version7.yaml  linux_64_c_compiler_version7cuda_compiler_version9.2cxx_compiler_version7.yaml  linux_64_c_compiler_version7cuda_compiler_versionNonecxx_compiler_version7.yaml  linux_cuda_compiler_version10.0.yaml  linux_cuda_compiler_version10.1.yaml  linux_cuda_compiler_version10.2.yaml  linux_cuda_compiler_version9.2.yaml  linux_cuda_compiler_versionNone.yaml  osx_.yaml  osx_64_c_compiler_version10cuda_compiler_versionNonecxx_compiler_version10.yaml  win_.yaml  win_64_cuda_compiler_versionNone.yaml
Array2D_test/: Array2D_tester.cpp  Array2D_tester.cu  CMakeLists.txt
CUDA_test/: CMakeLists.txt  CUDA_test0.cu  CUDA_test1.cu
DockerFiles/: prismatic-em-DockerFile_baseimage2  prismatic-em-DockerFile_cpu-jupyter-alpha-1.5  prismatic-em-DockerFile_gpu-jupyter-alpha-1.7
MATLAB/: HOWTO_compile_cuda.txt  HOWTO_compile_mex.txt  PRISM01.m  PRISM01.m~  PRISM02.m  PRISM02_ajp.m  PRISM02_parfor.m  PRISM03.m  PRISM03_ajp.m  PRISM03_ajp.m~  PRISM03_gpu.m  PRISM03_gpu.m~  PRISM03_mex.cpp  PRISM03_mex.cpp~  PRISM03_mex.mexa64  PRISM03_mex.mexmaci64  PRISM03_mexwrap.m  PRISM03_mexwrap.m~  PRISMmultislice.m  README.md  README.md~  atoms.txt  compare_speeds.m  demo.m  makeFourierCoords.m  progressbar.m  projPot.m~  run.m  run_ajp.m  run_gpu.m  time_multislice.m  timesTwo.cpp  timesTwo.cu  timesTwo.mexa64
PyPrismatic-1.0.08/: PKG-INFO  setup.py
PyPrismatic.egg-info/: PKG-INFO
Qt/: .qmake.stash  Makefile  PRISM-GUI.pro  PRISM-GUI.pro.user.abbc184  PRISM-GUI.pro.user.bd486de  breeze.qrc  cmake_install.cmake  dark.qss  libprism_shared.dylib  light.qss  main.cpp  moc_predefs.h  moc_prism_progressbar.cpp  moc_prism_qthreads.cpp  moc_prismmainwindow.cpp  moc_saveatomiccoordinatesdialog.cpp  prism-gui_plugin_import.cpp  prism_colormapper.cpp  prism_colormapper.cpp.autosave  prism_colormapper.h  prism_progressbar.cpp  prism_progressbar.h  prism_progressbar.ui  prism_qthreads.cpp  prism_qthreads.cpp.autosave  prism_qthreads.h  prism_resources.qrc  prismatic-gui.icns  prismatic-gui.pro  prismatic-gui.pro.user.abbc184  prismatic-gui.pro.user.bd486de  prismatic-gui.pro.user.bd486de.4.8-pre1  prismmainwindow.cpp  prismmainwindow.cpp.autosave  prismmainwindow.h  prismmainwindow.h.autosave  prismmainwindow.ui  prismmainwindow.ui.autosave  saveatomiccoordinatesdialog.cpp  saveatomiccoordinatesdialog.h  (+5 more)
b/: CMakeCache.txt  Makefile  PRISM  cmake_install.cmake  prism  prism-gui  prism-gui_automoc.cpp  ui_prismmainwindow.h
build_d/: Makefile  cmake_install.cmake
build_threads/: Makefile  cmake_install.cmake  prism  prism-gui  ui_prismmainwindow.h
del/: Makefile  PRISM-GUI  PRISM-GUI.pro  main.cpp  moc_prismmainwindow.cpp  prismmainwindow.cpp  prismmainwindow.h  prismmainwindow.ui
docs/: command-line.md
examples/: Demo.ipynb  base_output_name10base_output_ext  base_output_name11base_output_ext  base_output_name12base_output_ext  base_output_name13base_output_ext  base_output_name14base_output_ext  base_output_name15base_output_ext  base_output_name16base_output_ext  base_output_name17base_output_ext  base_output_name1base_output_ext  base_output_name2base_output_ext  base_output_name3base_output_ext  base_output_name4base_output_ext  base_output_name5base_output_ext  base_output_name6base_output_ext  base_output_name7base_output_ext  base_output_name8base_output_ext  base_output_name9base_output_ext  thickness_scan.py  thickness_scan.sh
for_marcus/: combine.py  probe-tilt-script.sh
include/: .Array2D.h.swp  .Multislice.cu.swp  .PRISM02.h.swp  Array2D.h  Array3D.h  ArrayND.h  HRTEM_entry.h  Multislice.cu  Multislice.cuh  Multislice.h  Multislice_calcOutput.cuh  Multislice_calcOutput.h  Multislice_entry.h  PRISM01.h  PRISM01_calcPotential.h  PRISM02.cuh  PRISM02.h  PRISM02_calcSMatrix.cuh  PRISM02_calcSMatrix.h  PRISM03.cuh  PRISM03.h  PRISM03_calcOutput.cuh  PRISM03_calcOutput.h  PRISM_entry.h  WorkDispatcher.h  aberration.h  atom.h  configure.h  cuprismatic.h  defines.h  emdSTEM.h  fileIO.cuh  fileIO.h  fparams.h  getWorkID.cpp  getWorkID.h  go.h  kirkland_params.h  meta.h  params.cuh  (+11 more)
pyprismatic/: __init__.py  core.cpp  fileio.py  params.py  process.py  pyprismatic.cpp
recipe/: build.bat  build_pyprismatic.bat  build_pyprismatic.sh  combined_build_install.sh  menu-windows.json  meta.yaml
src/: .PRISM03.cpp.swp  .PRISM03.cu.swp  .driver.cpp.swp  HRTEM_entry.cpp  Makefile  Multislice.cpp  Multislice.cu  Multislice_calcOutput.cpp  Multislice_calcOutput.cu  Multislice_entry.cpp  PRISM01.cpp  PRISM01.cpp.autosave  PRISM01_calcPotential.cpp  PRISM02.cpp  PRISM02.cu  PRISM02_calcSMatrix.cpp  PRISM02_calcSMatrix.cu  PRISM03.cpp  PRISM03.cu  PRISM03_calcOutput.cpp  PRISM03_calcOutput.cu  PRISM_entry.cpp  PRISM_entry.cpp.autosave  WorkDispatcher.cpp  aberration.cpp  atom.cpp  cmake_install.cmake  configure.cpp  (+14 more)
tests/Array2D_test/: 2D_test.cbp  Array2D_test_construct.cpp  Array2D_test_construct.cu  Array2D_test_rangefor.cpp  Array2D_test_rangefor.cu  Array2D_tester.cpp  Array2D_tester.cu  CMakeLists.txt  Makefile  a.out
tests/CUDA_test/: CMakeLists.txt  CUDA_test.cbp  CUDA_test0.cu  CUDA_test0_sync.cu  CUDA_test1.cu  Makefile  a.out  cmake_install.cmake
(+143 files in other folders)
